# cyme

./: .clang-format  .gitexternals  .gitignore  .gitreview  .travis.yml  AUTHORS.txt  CMakeLists.txt  Doxyfile.in  GGSC2015.md  LICENSE.txt  README.md  README.txt
CMake/: CPackConfig.cmake  Doxyfile.in  (+11 more)
cyme/instance/: CMakeLists.txt  README  cyme.cpp  cyme.h  cyme_math.h  instance.h  math.h
regression/: CMakeLists.txt  test_header.hpp
regression/memory/: CMakeLists.txt  alignment.cpp  array.cpp  core_engine.cpp  serial.cpp  storage.cpp  vector.cpp
regression/numeric/: CMakeLists.txt  exp.cpp  log.cpp  vec.cpp
regression/python/: CMakeLists.txt  main.cpp  test.py
sandbox/: CMakeLists.txt  branching.cpp  helpers.hpp  main.cpp  main_c.cpp  main_s.cpp  mandelbrot.cpp  test_print.cpp
src/: CMakeLists.txt  Doxyfile.in
src/cyme/: cyme.hpp
src/cyme/controller/expression/: expr_vec.hpp  expr_vec_fma.hpp  expr_vec_ops.hpp
src/cyme/controller/math/: exp.hpp  math.hpp  pow.hpp
src/cyme/controller/simd_vector/: simd_div.hpp  simd_math.hpp  simd_vec.hpp  simd_vec.ipp  simd_wrapper.hpp  trait.hpp
src/cyme/controller/simd_vector/detail/mic/: simd_wrapper_mic.ipp  trait_mic.ipp
src/cyme/controller/simd_vector/detail/powerpc64/: simd_wrapper_qpx.ipp  trait_powerpc64.ipp
src/cyme/controller/simd_vector/detail/x86/: .simd_wrapper_avx.ipp.swp  simd_wrapper_avx.ipp  simd_wrapper_sse.ipp  trait_x86.ipp
src/cyme/controller/simd_vector/math/: .simd_exp.hpp.swp  simd_div.hpp  simd_exp.hpp  simd_fma.hpp  simd_fms.hpp  simd_log.hpp  simd_neg.hpp  simd_rec.hpp  simd_vec.hpp
src/cyme/controller/simd_vector/math/detail/: remez.hpp
src/cyme/core/expression/: expr_vec.hpp  expr_vec_ops.hpp
src/cyme/core/simd_vector/: simd_vec.hpp  simd_vec.ipp  simd_wrapper.hpp  trait.hpp
src/cyme/core/simd_vector/detail/mic/: simd_wrapper_mic.ipp  trait_mic.ipp
src/cyme/core/simd_vector/detail/powerpc64/: simd_wrapper_qpx.ipp  trait_powerpc64.ipp
src/cyme/core/simd_vector/detail/x86/: simd_wrapper_avx.ipp  simd_wrapper_sse.ipp  trait_x86.ipp
src/cyme/core/simd_vector/math/: simd_div.hpp  simd_exp.hpp  simd_log.hpp  simd_mul.hpp  simd_rec.hpp  simd_sub.hpp
src/cyme/core/simd_vector/math/detail/: remez.hpp
src/cyme/math/: exp.hpp  math.hpp  ops.hpp  remez.hpp
src/cyme/memory/: allocator.hpp  array.hpp  block.hpp  serial.hpp  vector  vector.hpp
src/cyme/memory/detail/: array.hpp  simd.h  storage.hpp  storage.ipp
src/cyme/numeric/math/: exp.hpp  fac.hpp  ops.hpp
src/cyme/numeric/math/detail/: .simd_wrapper.hpp.swp  expr_vec.hpp  expr_vec_algo.hpp  simd_vec.hpp  simd_wrapper.hpp  trait.hpp
src/cyme/numeric/math/detail/mic/: simd_wrapper_mic.ipp  trait_mic.ipp
src/cyme/numeric/math/detail/powerpc64/: simd_wrapper_qpx.ipp  trait_powerpc64.ipp
src/cyme/numeric/math/detail/x86/: simd_wrapper_avx.ipp  simd_wrapper_sse.ipp
src/doc/: DAG.tiff  header.dox  intro.dox  tuto.dox
src/main/: .CMakeLists.txt.swp  CMakeLists.txt  bench.cpp  helper.h  main.cpp  mem.cpp  rd.cpp
src/memory/: allocator.hpp  block.hpp  block.ipp
src/memory/detail/: .simd.h.swp  array.hpp  simd.h  storage.hpp  storage.ipp
src/numeric/math/: arch.hpp  exp.hpp  fac.hpp  main.cpp  math.hpp  ops.hpp  pow.cpp  pow.hpp  remez.hpp  simd_vec.hpp  simd_wrapper.hpp  toto.cpp  trait.hpp
src/numeric/math/detail/: .simd_vec.hpp.swp  .trait.hpp.swp  CMakeCache.txt  expr_vec.hpp  expr_vec_algo.hpp  simd.hpp  simd_expr.hpp  simd_vec.hpp  simd_wrapper.hpp  simd_wrapper.ipp  trait.hpp
src/numeric/math/detail/powerpc64/: simd_wrapper_qpx.ipp  trait_powerpc64.ipp
src/numeric/math/detail/x86/: simd_wrapper_avx.ipp  simd_wrapper_sse.ipp  trait_x86.ipp
src/regression/: CMakeLists.txt  test_header.hpp
src/regression/memory/: .CMakeLists.txt.swp  CMakeLists.txt  alignment.cpp  array.cpp  array_algo.cpp  block.cpp  block_algo.cpp  serial.cpp  storage.cpp  vector.cpp
src/regression/numeric/: CMakeLists.txt  exp.cpp  factorial.cpp  log.cpp  pow.cpp  vec.cpp
src/sandbox/: CMakeLists.txt  main.cpp  test.cpp
src/test/test/: main.cpp  test.1
src/test/test.xcodeproj/: project.pbxproj
src/test/test.xcodeproj/project.xcworkspace/xcshareddata/: test.xccheckout
src/test/test.xcodeproj/xcuserdata/ewart.xcuserdatad/xcschemes/: test.xcscheme  xcschememanagement.plist
src/utils/: A2_inlines.h  timer.h
src/utils/include/nt2/arithmetic/: functions.hpp
src/utils/include/nt2/bitwise/: functions.hpp
src/utils/include/nt2/boolean/: functions.hpp
src/utils/include/nt2/constant/: constants.hpp
src/utils/include/nt2/core/: constants.hpp  core.hpp  functions.hpp
src/utils/include/nt2/elliptic/: functions.hpp
src/utils/include/nt2/euler/: constants.hpp
src/utils/include/nt2/exponential/: constants.hpp  functions.hpp
src/utils/include/nt2/ieee/: functions.hpp
src/utils/include/nt2/linalg/: functions.hpp
src/utils/include/nt2/memory/: functions.hpp
src/utils/include/nt2/operator/: functions.hpp
src/utils/include/nt2/predicates/: functions.hpp
src/utils/include/nt2/reduction/: functions.hpp
src/utils/include/nt2/statistics/: functions.hpp
src/utils/include/nt2/swar/: functions.hpp
src/utils/include/nt2/trigonometric/: constants.hpp
test/: CMakeLists.txt
test/regression/channels/: Na.cpp
test/unit/: test_header.hpp
test/unit/memory/: CMakeLists.txt  README  alignment.cpp  array.cpp  core_engine.cpp  core_scalar.cpp  serial.cpp  storage.cpp  vector.cpp
test/unit/numeric/: CMakeLists.txt  README  exp.cpp  log.cpp  pow.cpp  sqrt.cpp  vec.cpp
test/validity/channels/: CMakeLists.txt  Na.cpp  README  helpers.hpp
tests/: CMakeLists.txt
tests/unit/: test_header.hpp
tests/unit/memory/: CMakeLists.txt  README  alignment.cpp  array.cpp  core_engine.cpp  core_scalar.cpp  gather_scatter.cpp  serial.cpp  storage.cpp  vector.cpp
tests/unit/numeric/: CMakeLists.txt  README  bitwise.cpp  cast.cpp  cos.cpp  div.cpp  exp.cpp  exp10.cpp  exp2.cpp  fabs.cpp  inequality.cpp  log.cpp  log10.cpp  log2.cpp  pow.cpp  sin.cpp  sqrt.cpp  tan.cpp  vec.cpp
tests/validity/channels/: Na.cpp  README  helpers.hpp
(+2359 files in other folders)
